# AxisMD

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
app/: __init__.py  audio_state.py  config.py  graph.py  llm.py  prompt_template.py  recorder.py  tool_node.py  websocket.py
config/: config.yaml  config.yml
controller/auth/: auth.py
controller/notes/: notes.py
controller/patient/: patient.py
controller/users/: users.py
database/: __init__.py  database.py
migrations/: env.py
migrations/versions/: 3393ff7b25af_create_tables_in_my_schema.py  69df5ea7f003_create_tables_in_axismd.py
notes/: transcripts.jsonl
schema/: forms.py  models.py
test/: agent.ipynb
tools/: settings.py  tools.py
utils/: jwt_handler.py  security.py  utils.py
voice/: agent.py  audio_recorder.py  my_recorder.py  notes.py  recorder.py  service.py  stt.py  test_recorder.py  utilities.py
