[project]
name = "AxisMD"
version = "0.1.0"
description = ""
authors = [
    {name = "UmairAsDev",email = "umairashrafbsse@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "postgres (>=4.0,<5.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "openai (>=1.99.9,<2.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pyaudio (>=0.2.14,<0.3.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
