[project]
name = "AxisMD"
version = "0.1.0"
description = ""
authors = [
    {name = "UmairAsDev",email = "umairashrafbsse@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "postgres (>=4.0,<5.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "openai (>=1.99.9,<2.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pyaudio (>=0.2.14,<0.3.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pyprojroot (>=0.3.0,<0.4.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "sounddevice (>=0.5.2,<0.6.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "noisereduce (>=3.0.3,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
